--- a/index.html
+++ b/index.html
@@ -1,50 +1,102 @@
 <!DOCTYPE html>
+
 <head>
-<title></title>
-<link rel="stylesheet" href="css/style.css">
+    <title>Emily Anderson Writing Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
 
 
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <!--Boostrap CSS END-->
+    <link rel="stylesheet" href="styles.css">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&family=Outfit:wght@100;200;300;400;600;700;800;900&display=swap"
+        rel="stylesheet">
+
 </head>
+
+
+
+
+
 <body>
-<header class="nav">
-<div class="auto1">
-<div class="logo">
-<a href="./index.html">EMILY ANDERSON</a>
-</div>
-<!--"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo-->
-<!--navbar STARTS-->
-<div class="auto2">
-<a href="./work.html" id="about" class="auto2 label">About</a>
-<a href="./about.html"id="work" class="auto2 label">Work</a>
-<a href="./resume.html" id="resume" class="auto2 label">Resume</a>
-<a href="./contact.html" id="contact" class="auto2 label">Contact</a>
-</div>
-<!--navbar java STARTS
-<script>
-document.addEventListener("DOMContentLoaded", function( {
-const navItems = document.querySelectorAll ("nav div")
-}))
-</script>
-navbar ENDS-->
-</div>
-</header>
+    <div class="nav row">
+        <div class="auto1">
+            <div class="col-7 logo">
+                <a href="./index.html">EMILY ANDERSON</a>
+            </div>
+            <!--"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo-->
+            <!--navbar STARTS-->
+            <div class="col-5 auto2">
+                <a href="./about.html" id="about" class="auto2 label">About</a>
+                <div class="auto2 label dropdown">
+                    Work
+                    <div class="dropdown-content">
+                        <a class="dropdown-item" type="button">Essays</a>
+                        <a class="dropdown-item" type="button">Blogs</a>
+                        <a class="dropdown-item" type="button">Research</a>
+                    </div>
+                </div>
+                <a href="./resume.html" id="resume" class="auto2 label">Resume</a>
+                <a href="./contact.html" id="contact" class="auto2 label">Contact</a>
+            </div>
+        </div>
+    </div>
+    <section>
+        <!--first boostrap box-->
+        <div class="row circleIcons">
+            <div class="col-12">
+                <div class="row">
+                    <div class="iconList">
+                        <img class="itemA" src="images/description.svg">
+                        <img class="itemB" src="images/materials.svg">
+                        <img class="itemC" src="images/instructions.svg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!--footer as described in instructions-->
+    <footer>
+        <ul class="footerChunk">
+            <li class="footerLogo">EMILY ANDERSON</li>
+            <li>About</li>
+            <li>Work</li>
+            <li>Resume</li>
+            <li>Contact</li>
+        </ul>
+    </footer>
 
-</section>
-<section class="letsConnect">
+    <script>
+        // Get the dropdown button and dropdown content
+        const dropdown = document.querySelector(".dropdown");
+        const dropdownContent = document.querySelector(".dropdown-content");
 
-</section>
-<!--footer as described in instructions-->
-<footer>
-<ul class="footerChunk">
-<li class="footerLogo">EMILY ANDERSON</li>
-<li>About</li>
-<li>Work</li>
-<li>Resume</li>
-<li>Contact</li>
-</ul>
-</footer>
+        // Show the dropdown when the mouse enters the "Work" item
+        dropdown.addEventListener("mouseenter", () => {
+            dropdownContent.style.display = "block";
+        });
+
+        // Hide the dropdown when the mouse leaves the dropdown area
+        dropdown.addEventListener("mouseleave", () => {
+            dropdownContent.style.display = "none";
+        });
+
+    </script>
 </body>
+
 </html>
