--- a/index.html
+++ b/index.html
@@ -33,13 +33,45 @@
 
 
 <body>
+
+    <nav class="navbar navbar-expand-md" id="navMargin" stlye="background-color: white;">
+        <a class="navbar-brand logo" href="#">EMILY ANDERSON</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav auto2">
+                <li class="nav-item">
+                    <a class="nav-link text-nowrap mx-2" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown nav-link text-nowrap mx-2" href="#">Work
+                        <div class="dropdown-content">
+                            <a class="dropdown-item" type="button">Essays</a>
+                            <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
+                            <a class="dropdown-item" type="button">Research</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nowrap mx-2" href="./resume.html">Resume</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-nowrap mx-2" href="./contact.html">Contact</a>
+                </li>
+                <!-- Add more navbar items here -->
+            </ul>
+        </div>
+    </nav>
+
+    <!--
     <div class="nav row">
         <div class="auto1">
             <div class="col-7 logo">
                 <a href="./index.html">EMILY ANDERSON</a>
             </div>
-            <!--"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo-->
-            <!--navbar STARTS-->
+            <!-"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo
+            <!-navbar STARTS
             <div class="col-5 auto2">
                 <a href="./about.html" id="about" class="auto2 label">About</a>
                 <div class="auto2 label dropdown">
@@ -55,15 +87,14 @@
             </div>
         </div>
     </div>
+    -->
     <section>
         <!--first boostrap box-->
         <div class="row circleIcons">
             <div class="col-12">
                 <div class="row">
                     <div class="iconList">
-                        <img class="itemA" src="images/description.svg">
-                        <img class="itemB" src="images/materials.svg">
-                        <img class="itemC" src="images/instructions.svg">
+
                     </div>
                 </div>
             </div>
