--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav auto2">
                 <li class="nav-item">
-                    <a class="nav-link text-nowrap mx-2" href="./about.html">About</a>
+                    <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="#">Work
+                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -102,15 +102,13 @@
     </section>
 
     <!--footer as described in instructions-->
-    <footer>
-        <ul class="footerChunk">
-            <li class="footerLogo">EMILY ANDERSON</li>
-            <li>About</li>
-            <li>Work</li>
-            <li>Resume</li>
-            <li>Contact</li>
-        </ul>
-    </footer>
+    <div class="row footerChunk">
+            <a class="footerLogo">EMILY ANDERSON</a>
+            <a class="footerLink" href="./index.html">About</a>
+            <a class="footerLink" href="./work.html">Work</a>
+            <a class="footerLink" href="./resume.html">Resume</a>
+            <a class="footerLink" href="#">Contact</a>
+    </div>
 
     <script>
         // Get the dropdown button and dropdown content
