--- a/contact.html
+++ b/contact.html
@@ -89,14 +89,12 @@
     </div>
     -->
     <section>
-        <!--first boostrap box-->
-        <div class="row circleIcons">
-            <div class="col-12">
-                <div class="row">
-                    <div class="iconList">
-
-                    </div>
-                </div>
+        <div class="contactSection">
+            <h1>Contact</h1>
+            <div>
+                <h9>Email</h9>
+                <h9>LinkedIn</h9>
+          
             </div>
         </div>
     </section>
