--- a/essays.html
+++ b/essays.html
@@ -47,7 +47,7 @@
                 <li class="nav-item">
                     <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
                         <div class="dropdown-content">
-                            <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
+                            <a class="dropdown-item" type="button">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
                             <a class="dropdown-item" type="button">Research</a>
                         </div>
@@ -89,16 +89,24 @@
     </div>
     -->
     <section>
-        <div class="blogSection">
-            <h1>Work</h1>
+        <div class="essaySection">
+            <h1>Essays</h1>
             <div>
-                <h9>Essays</h9>
+                <h9>Profile Feature</h9>
                 <h9>Blogs</h9>
                 <h9>Research</h9>
             </div>
         </div>
     </section>
-
+<div class="essayDescrCont">
+    <div class="essayDescrItem">Title of Essay </div>
+</div>
+    <div class="row">
+        <div class="col=12 docPrev">
+            <iframe class="doc d-lg-flex" src="https://docs.google.com/document/d/e/2PACX-1vRIGfVUJ6Dq91VHzTly9l0kE_v6ewVWhu9TUy-gl9vKOk3mB72Owr3Tt-FX33z3HPee2hKfc4W-ckVj/pub?embedded=true"></iframe>
+        </div>
+     
+    </div>
  <!--footer as described in instructions-->
  <div class="row footerChunk">
     <a class="footerLogo">EMILY ANDERSON</a>
