--- a/work.html
+++ b/work.html
@@ -96,17 +96,143 @@
                 <h9>Blogs</h9>
                 <h9>Research</h9>
             </div>
+
+            <!-- Row 3 -->
+            <div class="row">
+                <div class="col-1">
+                    <!--filler-->
+                </div>
+
+                <!--text content START-->
+                <div class="col-3">
+                </div>
+
+                <div class="col-8">
+                    <!--filler-->
+                </div>
+                <!--text content END-->
+
+
+                <!--row for cards-->
+                <div class="row workStuff">
+                    <div class="col-1">
+                        <!--filler-->
+                    </div>
+                    <!--card container START-->
+                    <div class="col-10 d-flex justify-content-center">
+                        <div class="row">
+                            <!-- card 1 start -->
+                            <div class="col-4 reserarchBlobHolder">
+                                <div class="card researchBlob" style="width: 18rem;">
+                                    <div class="cardHeader">
+                                        <a href="./essays.html">
+                                            <img src="./images/essay.svg" class="icon1 card-img-top">
+                                            <H14>Essays</H14>
+                                        </a>
+
+                                    </div>
+                                    <div class="card-body">
+
+                                        <p class="card-text">Papers written during my undergraduate studies.</p>
+                                    </div>
+                                    <div class="cardLinks">
+                                        <a href="./essays.html">
+                                            <h15>Profile Feature</h15>
+                                            <img class="contArrow" src="./images/continuearrow.svg">
+                                        </a>
+                                    </div>
+                                    <div class="cardLinks">
+                                        <a href="./essays.html">
+                                            <h15>Press Release</h15>
+                                            <img class="contArrow" src="./images/continuearrow.svg">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+
+
+                            <!-- card 1 end -->
+
+
+                            <!-- card 2 start -->
+                            <div class="col-4 reserarchBlobHolder">
+                                <div class="card researchBlob" style="width: 18rem;">
+                                    <div class="cardHeader">
+                                        <a href="./blogs.html">
+                                            <img src="./images/blogs.svg" class="icon1 card-img-top">
+                                            <h14>Blogs</h14>
+                                        </a>
+
+                                    </div>
+                                    <div class="card-body">
+
+                                        <p class="card-text">Blog-style writing exercises that explore varying topics.
+                                        </p>
+                                    </div>
+                                    <div class="cardLinks">
+                                        <a href="./blogs.html">
+                                            <h15>"A No-Brainer"</h15>
+                                            <img class="contArrow" src="./images/continuearrow.svg">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- card 2 end -->
+
+
+
+
+                            <!-- card 3 start -->
+                            <div class="col-4 reserarchBlobHolder">
+                                <div class="card researchBlob" style="width: 18rem;">
+                                    <div class="cardHeader">
+                                        <a href="./research.html">
+                                            <img src="./images/research.svg" class="icon1 card-img-top">
+                                            <h14>Research</h14>
+                                        </a>
+                                    </div>
+                                    <div class="card-body">
+
+                                        <p class="card-text">Arguments supported by thorough analysis of outside
+                                            sources.</p>
+                                    </div>
+                                    <div class="cardLinks">
+                                        <a href="./blogs.html">
+                                            <h15>Issue Analysis</h15>
+                                            <img class="contArrow" src="./images/continuearrow.svg">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-1 imageContainer">
+                        <!--filler-->
+                    </div>
+                    <!-- card 3 end -->
+                </div>
+                <!--row for cards END-->
+            </div>
+        </div>
+        <!--card container END-->
+        </div>
+        <!-- End row 3 -->
+
+
+
         </div>
     </section>
 
- <!--footer as described in instructions-->
- <div class="row footerChunk">
-    <a class="footerLogo">EMILY ANDERSON</a>
-    <a class="footerLink" href="./index.html">About</a>
-    <a class="footerLink" href="./work.html">Work</a>
-    <a class="footerLink" href="./resume.html">Resume</a>
-    <a class="footerLink" href="#">Contact</a>
-</div>
+    <!--footer as described in instructions-->
+    <div class="row footerChunk">
+        <a class="footerLogo">EMILY ANDERSON</a>
+        <a class="footerLink" href="./index.html">About</a>
+        <a class="footerLink" href="./work.html">Work</a>
+        <a class="footerLink" href="./resume.html">Resume</a>
+        <a class="footerLink" href="#">Contact</a>
+    </div>
 
     <script>
         // Get the dropdown button and dropdown content
