--- a/essays.html
+++ b/essays.html
@@ -45,7 +45,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html">Work</a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
