--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
 <body>
 
     <nav class="navbar navbar-expand-md" id="navMargin" stlye="background-color: white;">
-        <a class="navbar-brand logo" href="./index.html">EMILY ANDERSON</a>
+        <a class="navbar-brand logo" href="#">EMILY ANDERSON</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -45,11 +45,11 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html">Work</a>
+                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
                         <div class="dropdown-content">
-                            <a class="dropdown-item" type="button">Essays</a>
+                            <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
-                            <a class="dropdown-item" type="button">Research</a>
+                            <a class="dropdown-item" type="button" href="./research.html">Research</a>
                         </div>
                     </div>
                 </li>
@@ -64,49 +64,25 @@
         </div>
     </nav>
 
-    <!--
-    <div class="nav row">
-        <div class="auto1">
-            <div class="col-7 logo">
-                <a href="./index.html">EMILY ANDERSON</a>
-            </div>
-            <!-"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo
-            <!-navbar STARTS
-            <div class="col-5 auto2">
-                <a href="./about.html" id="about" class="auto2 label">About</a>
-                <div class="auto2 label dropdown">
-                    Work
-                    <div class="dropdown-content">
-                        <a class="dropdown-item" type="button">Essays</a>
-                        <a class="dropdown-item" type="button">Blogs</a>
-                        <a class="dropdown-item" type="button">Research</a>
-                    </div>
-                </div>
-                <a href="./resume.html" id="resume" class="auto2 label">Resume</a>
-                <a href="./contact.html" id="contact" class="auto2 label">Contact</a>
-            </div>
-        </div>
-    </div>
-    -->
+
     <section>
         <div class="subNav row">
             <div class="col-4">
                 <div class="row">
-                    <a href="./index.html">
-                        <img src="./images/home.svg" class="subNav homeIcon">
-                    </a>
-                    <h12>> Resume</h12>
+                    <div class="col-12 subHolder">
+                        <a href="./index.html">
+                            <img src="./images/home.svg" class="homeIcon">
+                        </a>
+                        <h12 class="subH12">> Resume</h12>
+                    </div>                            
                 </div>
-               
             </div>
             <div class="col-8">
-                
             </div>
-
-
         </div>
-
     </section>
+
+
     <section>
         <div class="resumeSection">
             <h1>Resume</h1>
