--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
-                            <a class="dropdown-item" type="button">Research</a>
+                            <a class="dropdown-item" type="button" href="./research.html">Research</a>
                         </div>
                     </div>
                 </li>
@@ -64,37 +64,12 @@
         </div>
     </nav>
 
-    <!--
-    <div class="nav row">
-        <div class="auto1">
-            <div class="col-7 logo">
-                <a href="./index.html">EMILY ANDERSON</a>
-            </div>
-            <!-"auto 2" means the box that the nav label items are in within the larger "auto 1" autolayout that includes the logo
-            <!-navbar STARTS
-            <div class="col-5 auto2">
-                <a href="./about.html" id="about" class="auto2 label">About</a>
-                <div class="auto2 label dropdown">
-                    Work
-                    <div class="dropdown-content">
-                        <a class="dropdown-item" type="button">Essays</a>
-                        <a class="dropdown-item" type="button">Blogs</a>
-                        <a class="dropdown-item" type="button">Research</a>
-                    </div>
-                </div>
-                <a href="./resume.html" id="resume" class="auto2 label">Resume</a>
-                <a href="./contact.html" id="contact" class="auto2 label">Contact</a>
-            </div>
-        </div>
-    </div>
-    -->
+
     <section>
         <div class="blogSection">
             <h1>Work</h1>
             <div>
-                <h9>Essays</h9>
-                <h9>Blogs</h9>
-                <h9>Research</h9>
+              
             </div>
 
             <!-- Row 3 -->
@@ -136,13 +111,13 @@
                                         <p class="card-text">Papers written during my undergraduate studies.</p>
                                     </div>
                                     <div class="cardLinks">
-                                        <a href="./essays.html">
+                                        <a href="./profileft.html">
                                             <h15>Profile Feature</h15>
                                             <img class="contArrow" src="./images/continuearrow.svg">
                                         </a>
                                     </div>
                                     <div class="cardLinks">
-                                        <a href="./essays.html">
+                                        <a href="./pressrelease.html">
                                             <h15>Press Release</h15>
                                             <img class="contArrow" src="./images/continuearrow.svg">
                                         </a>
@@ -170,8 +145,14 @@
                                         </p>
                                     </div>
                                     <div class="cardLinks">
-                                        <a href="./blogs.html">
+                                        <a href="./blog1.html">
                                             <h15>"A No-Brainer"</h15>
+                                            <img class="contArrow" src="./images/continuearrow.svg">
+                                        </a>
+                                    </div>
+                                    <div class="cardLinks">
+                                        <a href="./blog2.html">
+                                            <h15>"Should You Be Worried About Your Dog's Dry Food?"</h15>
                                             <img class="contArrow" src="./images/continuearrow.svg">
                                         </a>
                                     </div>
@@ -197,7 +178,7 @@
                                             sources.</p>
                                     </div>
                                     <div class="cardLinks">
-                                        <a href="./blogs.html">
+                                        <a href="./research.html">
                                             <h15>Issue Analysis</h15>
                                             <img class="contArrow" src="./images/continuearrow.svg">
                                         </a>
