--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,9 @@
                 <li class="nav-item">
                     <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
                         <div class="dropdown-content">
-                            <a class="dropdown-item" type="button">Essays</a>
+                            <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
-                            <a class="dropdown-item" type="button">Research</a>
+                            <a class="dropdown-item" type="button" href="./research.html">Research</a>
                         </div>
                     </div>
                 </li>
