--- a/profileft.html
+++ b/profileft.html
@@ -44,7 +44,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -72,7 +72,7 @@
                             <img src="./images/home.svg" class="homeIcon">
                         </a>
                         <h12 class="subH12">> <a href="./essays.html"> Essays </a> > Profile Feature</h12>
-                    </div>                            
+                    </div>
                 </div>
             </div>
             <div class="col-8">
@@ -80,32 +80,37 @@
         </div>
     </section>
     <section>
+        <div class="tertNav">
+            <a href="./essays.html">
+                <img class="backArrow" src="./images/backarrow.svg">
+                <h18>View all essays</h18>
+            </a>
+        </div>
+
         <div class="essaySection">
-            <h1>Essays</h1>
             <div>
                 <h9>Profile Feature</h9>
-                <h9>Blogs</h9>
-                <h9>Research</h9>
             </div>
         </div>
     </section>
-<div class="essayDescrCont">
-    <div class="essayDescrItem">Title of Essay </div>
-</div>
+    <div class="essayDescrCont">
+        <div class="essayDescrItem">A profile of professional writer, Keith Watson, and his career experiences. </div>
+    </div>
     <div class="row">
         <div class="col=12 docPrev">
-            <iframe class="doc d-lg-flex" src="https://docs.google.com/document/d/e/2PACX-1vRIGfVUJ6Dq91VHzTly9l0kE_v6ewVWhu9TUy-gl9vKOk3mB72Owr3Tt-FX33z3HPee2hKfc4W-ckVj/pub?embedded=true"></iframe>
+            <iframe class="doc d-lg-flex"
+                src="https://docs.google.com/document/d/e/2PACX-1vRIGfVUJ6Dq91VHzTly9l0kE_v6ewVWhu9TUy-gl9vKOk3mB72Owr3Tt-FX33z3HPee2hKfc4W-ckVj/pub?embedded=true"></iframe>
         </div>
-     
+
     </div>
- <!--footer as described in instructions-->
- <div class="row footerChunk">
-    <a class="footerLogo">EMILY ANDERSON</a>
-    <a class="footerLink" href="./index.html">About</a>
-    <a class="footerLink" href="./work.html">Work</a>
-    <a class="footerLink" href="./resume.html">Resume</a>
-    <a class="footerLink" href="#">Contact</a>
-</div>
+    <!--footer as described in instructions-->
+    <div class="row footerChunk">
+        <a class="footerLogo">EMILY ANDERSON</a>
+        <a class="footerLink" href="./index.html">About</a>
+        <a class="footerLink" href="./work.html">Work</a>
+        <a class="footerLink" href="./resume.html">Resume</a>
+        <a class="footerLink" href="#">Contact</a>
+    </div>
 
     <script>
         // Get the dropdown button and dropdown content
