--- a/blog1.html
+++ b/blog1.html
@@ -45,7 +45,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -80,12 +80,20 @@
             </div>
         </div>
     </section>
-
+    <div class="tertNav">
+        <a href="./blogs.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all blogs</h18>
+        </a>
+    </div>
     <section>
         <div class="blogSection">
-            <h1>Blog 1</h1>
+    
             <div>
-                <h9>A No-Brainer</h9>
+                <div class="blogTitle">
+                    <h9>"A No-Brainer"</h9>
+                </div>
+              
 
                 <p style="text-indent: 4rem;">Bright yellow buckets are being dispersed amongst some California high school classrooms, and teacher
                     Larry Lexicon confronted the big, yellow elephant-in-the-room in a TikTok video. He explains the
