--- a/blog2.html
+++ b/blog2.html
@@ -44,7 +44,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -79,14 +79,19 @@
             </div>
         </div>
     </section>
-
+    <div class="tertNav">
+        <a href="./blogs.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all blogs</h18>
+        </a>
+    </div>
     <section>
         <div class="blogSection">
         
            
             <div>
                 <div class="blogTitle">
-                    <h9>Should You Be Worried About Your Dog’s Dry Food? </h9>
+                    <h9>"Should You Be Worried About Your Dog’s Dry Food?"</h9>
                 </div>
 
                 <p style="text-indent: 4rem;">What if I told you that the “burnt brown balls” you feed your dog are processed at temperatures known
