--- a/blogs.html
+++ b/blogs.html
@@ -45,7 +45,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -80,7 +80,12 @@
             </div>
         </div>
     </section>
-
+    <div class="tertNav">
+        <a href="./work.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all work</h18>
+        </a>
+    </div>
         <div class="blogLandTitle">
             <h1>Blogs</h1>
         </div>
