--- a/essays.html
+++ b/essays.html
@@ -44,7 +44,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -71,7 +71,7 @@
                         <a href="./index.html">
                             <img src="./images/home.svg" class="homeIcon">
                         </a>
-                        <h12 class="subH12">> <a href="./work.html"> Work </a> > Blogs </h12>
+                        <h12 class="subH12">> <a href="./work.html"> Work </a> > Essays </h12>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,12 @@
             </div>
         </div>
     </section>
-
+    <div class="tertNav">
+        <a href="./work.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all work</h18>
+        </a>
+    </div>
         <div class="blogLandTitle">
             <h1>Essays</h1>
         </div>
