--- a/pressrelease.html
+++ b/pressrelease.html
@@ -44,7 +44,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -79,16 +79,14 @@
             </div>
         </div>
     </section>
-    <section>
-        <div class="essaySection">
-            <h1>Essays</h1>
-            <div>
-              
-            </div>
-        </div>
-    </section>
+    <div class="tertNav">
+        <a href="./essays.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all essays</h18>
+        </a>
+    </div>
 <div class="essayDescrCont">
-    <div class="essayDescrItem">Title of Essay </div>
+    <div class="essayDescrItem">An exercise in practicing top-down reporting and media-writing techniques.</div>
 </div>
     <div class="row">
         <div class="col=12 docPrev">
