--- a/research.html
+++ b/research.html
@@ -44,7 +44,7 @@
                     <a class="nav-link text-nowrap mx-2" href="./index.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <div class="dropdown nav-link text-nowrap mx-2" href="./work.html">Work
+                    <div class="dropdown nav-link text-nowrap mx-2"> <a href="./work.html"> Work </a>
                         <div class="dropdown-content">
                             <a class="dropdown-item" type="button" href="./essays.html">Essays</a>
                             <a class="dropdown-item" type="button" href="./blogs.html">Blogs</a>
@@ -79,11 +79,12 @@
         </div>
     </section>
 
-    <section>
-        <div class="essaySection">
-         
-        </div>
-    </section>
+    <div class="tertNav">
+        <a href="./work.html">
+            <img class="backArrow" src="./images/backarrow.svg">
+            <h18>View all work</h18>
+        </a>
+    </div>
     <div class="row essayDescrCont">
         <div class="col- reserarchBlobHolder">
             <div class="card researchBox" style="width: 18rem;">
