--- a/blogs.html
+++ b/blogs.html
@@ -100,12 +100,12 @@
 
 
             <!-- card 1 start -->
-            <div class="reserarchBlobHolder">
+            <div class="col-6 reserarchBlobHolder">
                 <div class="card researchBlobC">
                     <div class="cardHeaderC">
-                        <a href="./essays.html">
-                            <img src="./images/blogs.svg" class="icon1 card-img-top">
-                            <H14>"A No-Brainer"</H14>
+                        <a href="./blog1.html">
+                            <img src="./images/blogs.svg" class="icon1D card-img-top">
+                            <H20>"A No-Brainer"</H20>
                         </a>
 
                     </div>
@@ -124,24 +124,22 @@
                 </div>
             </div>
 
-        </div>
-        <!-- card 1 end -->
 
-        <div class="row workStuff">
+        <div class="col-6 workStuff">
             <!-- card 2 start -->
             <div class="reserarchBlobHolder">
                 <div class="card researchBlobC">
                     <div class="cardHeaderC">
-                        <a href="./blogs.html">
-                            <img src="./images/blogs.svg" class="icon1 card-img-top">
-                            <h14>"Should You Be Worried About Your Dog's Dry Food?"</h14>
+                        <a href="./blog2.html">
+                            <img src="./images/blogs.svg" class="icon1D card-img-top">
+                            <h20>"Should You Be Worried About Your Dog's Dry Food?"</h20>
                         </a>
 
                     </div>
                     <div class="card-body">
 
                         <p class="card-textB"> A conversation about up-and-coming subscription-dog-food marketing
-                            tactics.
+                            tactics which capitalize on "wellness-era" buzzwords. 
                         </p>
                     </div>
                     <div class="cardLinksB">
@@ -155,6 +153,10 @@
             </div>
 
         </div>
+
+        </div>
+        <!-- card 1 end -->
+
         <!-- card 2 end -->
      </section>
             
