--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,11 @@
     -->
     <section>
         <div class="contactSection">
+           <div class="blogTitle">
             <h1>Contact</h1>
+           </div>
+            
+
             <div>
                 <h9>Email</h9>
                 <h9>LinkedIn</h9>
