--- a/resume.html
+++ b/resume.html
@@ -85,7 +85,10 @@
 
     <section>
         <div class="resumeSection">
-            <h1>Resume</h1>
+            <div class="blogTitle">
+                <h1>Resume</h1>
+            </div>
+            
 
             <div class="row">
                 <div class="col-4">
